Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13960

QML memory leak animating font point size

XMLWordPrintable

    • f111e97adf93a933351eb5658b33a5820097757a

      When animating the font point size in QML, memory usage keeps increasing when interrupting animations.
      A QML example is attached. Repeatedly click and hold down mouse button on the text until it is halfway through the animation then release and repeat.
      Memory usage quickly increases.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes