Request font sizes with only 0.5pt resolution.

When animating pointSize avoid generating a huge number of fonts with
slightly different point sizes.

Task-number: QTBUG-13960
Reviewed-by: Aaron Kennedy
(cherry picked from commit f111e97adf93a933351eb5658b33a5820097757a)